--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ django-debug-toolbar = "==3.1"
 whitenoise = "==5.2.0"
 environs = {extras = ["django"], version = "==8.0.0"}
 psycopg2-binary = "==2.8.5"
+bokeh = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.8"
